Add styling to the image and the username

--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <title>My web page</title>
-    </head>
+  <head>
+    <title>My web page</title>
+    <style>
+      img {
+        width: 50px;
+        border-radius: 50px;
+        float: left;
+        margin-right: 10px;
+      }
 
-    <body>
-        <img src="images/WhatsApp Image 2021-02-06 at 22.21.33.jpeg" >
-        <p>@dula_yeon</p>
-        <p>I will not give up.</p>
-    </body>
+      .username {
+        font-weight: bold;
+      }
+    </style>
+  </head>
+
+  <body>
+    <img src="images/WhatsApp Image 2021-02-06 at 22.21.33.jpeg" />
+    <p class="username">@dula_yeon</p>
+    <p>I will not give up.</p>
+  </body>
 </html>
