Add alt attribute to the image

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
 
   <body>
-    <img src="images/WhatsApp Image 2021-02-06 at 22.21.33.jpeg" />
+    <img src="images/WhatsApp Image 2021-02-06 at 22.21.33.jpeg" alt="An image of Dula"/>
     <p class="username">@dula_yeon</p>
     <p>I will not give up.</p>
   </body>
