Add HTML entities

--- a/index.html
+++ b/index.html
@@ -14,12 +14,17 @@
       .username {
         font-weight: bold;
       }
+
+      em {
+        color: red;
+        font-style: normal;
+      }
     </style>
   </head>
 
   <body>
     <img src="images/WhatsApp Image 2021-02-06 at 22.21.33.jpeg" alt="An image of Dula"/>
     <p class="username">@dula_yeon</p>
-    <p>I will not give up.</p>
+    <p>I will <em>not</em> give up. &copy; &copf;</p>
   </body>
 </html>
