--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </head>
 
   <body>
-    <img src="images/WhatsApp Image 2021-02-06 at 22.21.33.jpeg" alt="An image of Dula"/>
+    <img src="images/e2a5ab97c138b92b823745f40dd84f9f.jpg" alt="An image of Dula"/>
     <p class="username">@dula_kit</p>
     <p>I will <em>not</em> give up. &copy;</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur consequuntur eaque maxime quisquam, quam illo voluptates saepe veniam eveniet voluptatem culpa minima voluptatibus cumque dolor quas ea? Libero blanditiis accusamus similique! Quis quam maiores suscipit cupiditate enim, atque, nesciunt dolore iure odit mollitia odio quia doloremque commodi. Mollitia, doloribus facere!</p>
