Link the main.css with index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
   <head>
     <title>My web page</title>
+    <link rel="stylesheet" href="css/main.css">
     <style>
       img {
         width: 100px;
