Start creating a navBar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   </head>
 
   <body>
+    <div class="navBar">
+      <!-- .container -->
+      <div class="container">
+        <a href="#">Remember<span>That</span></a>
+      </div>
+    </div>
+    
+
+
+
     <img src="images/e2a5ab97c138b92b823745f40dd84f9f.jpg" alt="An image of Dula"/>
     <p class="username">@dula_kit</p>
     <p>I will <em>not</em> give up. &copy;</p>
