Create an unordered list inside a nav tag

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
       <!-- .container -->
       <div class="container">
         <a href="#">Remember<span>That</span></a>
+        <nav>
+          <ul>
+            <li><a href="#"></a>Home</li>
+            <li><a href="#"></a>Features</li>
+            <li><a href="#"></a>Pricing</li>
+          </ul>
+        </nav>
+        
       </div>
     </div>
     
