--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="#">Remember<span>That</span></a>
         <nav>
           <ul>
-            <li><a href="#"></a>Home</li>
+            <li class="current"><a href="#"></a>Home</li>
             <li><a href="#"></a>Features</li>
             <li><a href="#"></a>Pricing</li>
           </ul>
