Add a class attribute to the first unordered list

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="container">
         <a href="#">Remember<span>That</span></a>
         <nav>
-          <ul>
+          <ul class="primary-nav">
             <li class="current"><a href="#"></a>Home</li>
             <li><a href="#"></a>Features</li>
             <li><a href="#"></a>Pricing</li>
