Add another unordered list dor the navBar

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
             <li><a href="#"></a>Features</li>
             <li><a href="#"></a>Pricing</li>
           </ul>
+
+          <ul class="secondary-nav">
+            <li><a href="#"></a>Contact</li>
+            <li class="go-premium-cta"><a href="#"></a>Go Premium</li>
+          </ul>
+
         </nav>
         
       </div>
