Add the hamburger menu icon inside an img tag and give a class attribute mobile-menu

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       <!-- .container -->
       <div class="container">
         <a href="#">Remember<span>That</span></a>
+
+        <img class="mobile-menu" src="images/Menu.svg" alt="Open navigation">
+
         <nav>
           <ul class="primary-nav">
             <li class="current"><a href="#"></a>Home</li>
