--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="container">
         <a href="#">Remember<span>That</span></a>
 
-        <img class="mobile-menu" src="images/Menu.svg" alt="Open navigation">
+        <img id="mobile-cta" class="mobile-menu" src="images/Menu.svg" alt="Open navigation">
 
         <nav>
           <ul class="primary-nav">
