--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
       <div class="container">
         <a href="#">Remember<span>That</span></a>
 
-        <img id="mobile-cta" class="mobile-menu" src="images/Menu.svg" alt="Open navigation">
+        <img id="mobile-cta" class="mobile-menu" src="images/menu.svg" alt="Open navigation">
 
         <nav>
+
+          <img id="mobile-exit" class="mobile-menu-exit" src="images/exit.svg" alt="Close navigation">
+
           <ul class="primary-nav">
             <li class="current"><a href="#"></a>Home</li>
             <li><a href="#"></a>Features</li>
