--- a/index.html
+++ b/index.html
@@ -30,18 +30,25 @@
           </ul>
 
         </nav>
-        
+
       </div>
     </div>
-    
+
+    <section class="hero">
+      <div class="container">
+        <div class="left-col">
+          <p class="subHead">It's Nitty &amp; Gritty</p>
+          <h1>A Task App That Doesn't Stink</h1>
+        </div>
+      </div>
+    </section>
 
 
+    <!--    <img src="images/person.jpg" alt="An image of Dula"/>-->
+    <!--    <p class="username">@dula_kit</p>-->
+    <!--    <p>I will <em>not</em> give up. &copy;</p>-->
+    <!--    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur consequuntur eaque maxime quisquam, quam illo voluptates saepe veniam eveniet voluptatem culpa minima voluptatibus cumque dolor quas ea? Libero blanditiis accusamus similique! Quis quam maiores suscipit cupiditate enim, atque, nesciunt dolore iure odit mollitia odio quia doloremque commodi. Mollitia, doloribus facere!</p>-->
 
-    <img src="images/person.jpg" alt="An image of Dula"/>
-    <p class="username">@dula_kit</p>
-    <p>I will <em>not</em> give up. &copy;</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur consequuntur eaque maxime quisquam, quam illo voluptates saepe veniam eveniet voluptatem culpa minima voluptatibus cumque dolor quas ea? Libero blanditiis accusamus similique! Quis quam maiores suscipit cupiditate enim, atque, nesciunt dolore iure odit mollitia odio quia doloremque commodi. Mollitia, doloribus facere!</p>
-
-    <a href="about.html">About Me</a>
-  </body>
+    <!--    <a href="about.html">About Me</a>-->
+    <!--  </body>-->
 </html>
