--- a/index.html
+++ b/index.html
@@ -39,7 +39,14 @@
         <div class="left-col">
           <p class="subHead">It's Nitty &amp; Gritty</p>
           <h1>A Task App That Doesn't Stink</h1>
+
+          <div class="hero-cta">
+            <a href="#" class="primary-cta">Try for Free</a>
+            <a href="#" class="watch-video-cta">
+              <img src="images/watch.svg" alt="Watch a video"> Watch a video</a>
+          </div>
         </div>
+        <img src="images/illustration.svg" class="hero-img" alt="Illustration">
       </div>
     </section>
 
