Create features section

--- a/index.html
+++ b/index.html
@@ -50,6 +50,21 @@
       </div>
     </section>
 
+    <section class="features-section">
+      <div class="container">
+        <ul>
+          <li>Unlimited tools</li>
+          <li>SMS Task Reminders</li>
+          <li>Confetti Explosions upon Task Completions</li>
+          <li>Social Media Announcements</li>
+          <li>Real Time Collaboration</li>
+          <li>Other awesome features</li>
+        </ul>
+
+        <img src="images/holding-phone.jpg" alt="Man holding a phone">
+      </div>
+    </section>
+
 
     <!--    <img src="images/person.jpg" alt="An image of Dula"/>-->
     <!--    <p class="username">@dula_kit</p>-->
@@ -57,5 +72,5 @@
     <!--    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur consequuntur eaque maxime quisquam, quam illo voluptates saepe veniam eveniet voluptatem culpa minima voluptatibus cumque dolor quas ea? Libero blanditiis accusamus similique! Quis quam maiores suscipit cupiditate enim, atque, nesciunt dolore iure odit mollitia odio quia doloremque commodi. Mollitia, doloribus facere!</p>-->
 
     <!--    <a href="about.html">About Me</a>-->
-    <!--  </body>-->
+  </body>
 </html>
