Create testimonials section

--- a/index.html
+++ b/index.html
@@ -65,6 +65,42 @@
       </div>
     </section>
 
+    <section class="testimonials-section">
+      <div class="container">
+        <ul>
+          <li>
+            <img src="images/person.jpg" alt="Person">
+            <blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ab accusantium alias amet at cum
+              delectus doloremque eum illo ipsum iure iusto magni maiores maxime modi molestiae necessitatibus neque
+              nihil optio, quaerat quia quidem quisquam quo veniam vitae voluptatem voluptatum. Aliquid cupiditate ex
+              facilis id magnam provident quae, similique totam!
+            </blockquote>
+            <cite> - Jane Doe</cite>
+          </li>
+
+          <li>
+            <img src="images/person.jpg" alt="Person">
+            <blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ab accusantium alias amet at cum
+              delectus doloremque eum illo ipsum iure iusto magni maiores maxime modi molestiae necessitatibus neque
+              nihil optio, quaerat quia quidem quisquam quo veniam vitae voluptatem voluptatum. Aliquid cupiditate ex
+              facilis id magnam provident quae, similique totam!
+            </blockquote>
+            <cite> - Jane Doe</cite>
+          </li>
+
+          <li>
+            <img src="images/person.jpg" alt="Person">
+            <blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ab accusantium alias amet at cum
+              delectus doloremque eum illo ipsum iure iusto magni maiores maxime modi molestiae necessitatibus neque
+              nihil optio, quaerat quia quidem quisquam quo veniam vitae voluptatem voluptatum. Aliquid cupiditate ex
+              facilis id magnam provident quae, similique totam!
+            </blockquote>
+            <cite> - Jane Doe</cite>
+          </li>
+        </ul>
+      </div>
+    </section>
+
 
     <!--    <img src="images/person.jpg" alt="An image of Dula"/>-->
     <!--    <p class="username">@dula_kit</p>-->
