--- a/index.html
+++ b/index.html
@@ -101,6 +101,22 @@
       </div>
     </section>
 
+    <section class="contact-section">
+      <div class="container">
+        <div class="contact-left">
+          <h2>Contact</h2>
+
+          <form action="">
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name">
+
+            <label for="message">Message</label>
+            <textArea id="message" name="message" cols="30" rows="10"></textArea>
+          </form>
+        </div>
+      </div>
+    </section>
+
 
     <!--    <img src="images/person.jpg" alt="An image of Dula"/>-->
     <!--    <p class="username">@dula_kit</p>-->
