--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="navBar">
       <!-- .container -->
       <div class="container">
-        <a href="#">Remember<span>That</span></a>
+        <a href="#" class="logo">Remember<span>That</span></a>
 
         <img id="mobile-cta" class="mobile-menu" src="images/menu.svg" alt="Open navigation">
 
