Add css to features-section class

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <section class="features-section">
       <div class="container">
-        <ul>
+        <ul class="features-list">
           <li>Unlimited tools</li>
           <li>SMS Task Reminders</li>
           <li>Confetti Explosions upon Task Completions</li>
