Add css to testimonials-section and testimonials-section-list classes

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     <section class="testimonials-section">
       <div class="container">
         <ul>
-          <li>
-            <img src="images/person.jpg" alt="Person">
+          <li class="testimonials-section-list">
+            <img class="testimonials-section-img" src="images/person.jpg" alt="Person">
             <blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ab accusantium alias amet at cum
               delectus doloremque eum illo ipsum iure iusto magni maiores maxime modi molestiae necessitatibus neque
               nihil optio, quaerat quia quidem quisquam quo veniam vitae voluptatem voluptatum. Aliquid cupiditate ex
@@ -78,8 +78,8 @@
             <cite> - Jane Doe</cite>
           </li>
 
-          <li>
-            <img src="images/person.jpg" alt="Person">
+          <li class="testimonials-section-list">
+            <img class="testimonials-section-img" src="images/person.jpg" alt="Person">
             <blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ab accusantium alias amet at cum
               delectus doloremque eum illo ipsum iure iusto magni maiores maxime modi molestiae necessitatibus neque
               nihil optio, quaerat quia quidem quisquam quo veniam vitae voluptatem voluptatum. Aliquid cupiditate ex
@@ -88,8 +88,8 @@
             <cite> - Jane Doe</cite>
           </li>
 
-          <li>
-            <img src="images/person.jpg" alt="Person">
+          <li class="testimonials-section-list">
+            <img class="testimonials-section-img" src="images/person.jpg" alt="Person">
             <blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ab accusantium alias amet at cum
               delectus doloremque eum illo ipsum iure iusto magni maiores maxime modi molestiae necessitatibus neque
               nihil optio, quaerat quia quidem quisquam quo veniam vitae voluptatem voluptatum. Aliquid cupiditate ex
