Add css to testimonials-section-img class

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               nihil optio, quaerat quia quidem quisquam quo veniam vitae voluptatem voluptatum. Aliquid cupiditate ex
               facilis id magnam provident quae, similique totam!
             </blockquote>
-            <cite> - Jane Doe</cite>
+            <cite> - Phi Ball</cite>
           </li>
 
           <li class="testimonials-section-list">
@@ -85,7 +85,7 @@
               nihil optio, quaerat quia quidem quisquam quo veniam vitae voluptatem voluptatum. Aliquid cupiditate ex
               facilis id magnam provident quae, similique totam!
             </blockquote>
-            <cite> - Jane Doe</cite>
+            <cite> - Phi Ball</cite>
           </li>
 
           <li class="testimonials-section-list">
@@ -95,7 +95,7 @@
               nihil optio, quaerat quia quidem quisquam quo veniam vitae voluptatem voluptatum. Aliquid cupiditate ex
               facilis id magnam provident quae, similique totam!
             </blockquote>
-            <cite> - Jane Doe</cite>
+            <cite> - Phi Ball</cite>
           </li>
         </ul>
       </div>
