Add css to lsbel tag

--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
 
             <label for="message">Message</label>
             <textArea id="message" name="message" cols="30" rows="10"></textArea>
+
+            <input type="submit" class="send-message" value="Send Message">
           </form>
         </div>
       </div>
