Add css to holding-phone class

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <li>Other awesome features</li>
         </ul>
 
-        <img src="images/holding-phone.jpg" alt="Man holding a phone">
+        <img class="holding-phone" src="images/holding-phone.jpg" alt="Man holding a phone">
       </div>
     </section>
 
