--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
     </section>
 
 
+    <script src="main.js"></script>
+
+
     <!--    <img src="images/person.jpg" alt="An image of Dula"/>-->
     <!--    <p class="username">@dula_kit</p>-->
     <!--    <p>I will <em>not</em> give up. &copy;</p>-->
